# craytracer

./: .gitignore  Cargo.toml  README.md  TODO.md
images/: logo.ppm  random_spheres.ppm  simple.ppm
objs/: README.md
objs/staircase/: staircase.mtl
scenes/: anthropic.cry  cornell.cry  dragon.cry  helmet.cry  materials.cry  museum.cry  mustang.cry  room.cry  rounding-error.cry  scratch.cry  simple.cry  staircase.cry  test.cry  washington.cry
src/: bounds.rs  bsdf.rs  bvh.rs  bxdf.rs  camera.rs  color.rs  constants.rs  film.rs  geometry.rs  image.rs  intersection.rs  lib.rs  light.rs  macros.rs  main.rs  material.rs  obj.rs  parser.rs  path_integrator.rs  pdf.rs  primitive.rs  ray.rs  sampler.rs  sampling.rs  scene.rs  scene_parser.rs  scenes.rs  shape.rs  simple_integrator.rs  texture.rs  trace.rs  transformation.rs  util.rs  vector.rs
tests/: test_bounds.rs  test_bvh.rs  test_bxdf.rs  test_color.rs  test_geometry.rs  test_parser.rs  test_shape.rs  test_transformation.rs  test_util.rs  test_vector.rs
