[package]
name = "craytracer"
version = "0.1.0"
authors = ["Shrey Banga <banga.shrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
minifb = "0.23.0"
num_cpus = "1.13.1"
rand = "0.8.5"
rayon = "1.5.3"
threadpool = "1.8.1"

