[package]
name = "craytracer"
version = "0.1.0"
authors = ["Shrey Banga <banga.shrey@gmail.com>"]
edition = "2018"
default-run = "craytracer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "3.2.17", features = ["derive"] }
crossbeam = "0.8.2"
image = "0.24.3"
minifb = "0.23.0"
num_cpus = "1.13.1"
rand = "0.8.5"
rand_distr = "0.4.3"
tobj = "3.2.3"

[[bin]]
name = "craytracer"
path = "src/bin/craytracer.rs"

[[bin]]
name = "sampling"
path = "src/bin/sampling.rs"

[dev-dependencies]
pretty_assertions = "1.3.0"
